[gd_scene load_steps=2 format=3 uid="uid://cx7ypwxw8h03w"]

[ext_resource type="Script" path="res://scripts/PROVINCEGUI.gd" id="1_g67a7"]

[node name="ProvinceGui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g67a7")

[node name="AcceptDialog" type="AcceptDialog" parent="."]
title = "WAIT!"
position = Vector2i(200, 250)
size = Vector2i(565, 250)
ok_button_text = "Great..."
dialog_text = "This game is in Alpha stage! Please remember when you are playing ,
that some things do not work! It's OK. Everything will be OK.

Please. It's OK."

[node name="TopPanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1150.0
offset_bottom = 76.0

[node name="SeasonLbl" type="Label" parent="TopPanel"]
layout_mode = 0
offset_left = 960.0
offset_top = 48.0
offset_right = 1088.0
offset_bottom = 74.0
text = "Season"

[node name="DayLbl" type="Label" parent="TopPanel"]
layout_mode = 0
offset_left = 960.0
offset_right = 1040.0
offset_bottom = 26.0
text = "Day:"

[node name="YearLbl" type="Label" parent="TopPanel"]
layout_mode = 0
offset_left = 1048.0
offset_right = 1152.0
offset_bottom = 26.0
text = "Year:"

[node name="Button" type="Button" parent="TopPanel"]
layout_mode = 0
offset_left = 1184.0
offset_right = 1278.0
offset_bottom = 31.0
text = "Save Game"

[node name="LoadGameBtn" type="Button" parent="TopPanel"]
layout_mode = 0
offset_left = 1184.0
offset_top = 40.0
offset_right = 1280.0
offset_bottom = 71.0
text = "Load Game"

[node name="LeaderBtn" type="Button" parent="TopPanel"]
layout_mode = 0
offset_left = 8.0
offset_right = 70.0
offset_bottom = 31.0
disabled = true
text = "Leader"

[node name="GovernmentBtn" type="Button" parent="TopPanel"]
layout_mode = 0
offset_left = 128.0
offset_right = 234.0
offset_bottom = 31.0
disabled = true
text = "Government"

[node name="ResearchBtn" type="Button" parent="TopPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 40.0
offset_right = 87.0
offset_bottom = 71.0
disabled = true
text = "Research"

[node name="DiplomacyBTn" type="Button" parent="TopPanel"]
layout_mode = 0
offset_left = 128.0
offset_top = 40.0
offset_right = 218.0
offset_bottom = 71.0
disabled = true
text = "Diplomacy"

[node name="VersionBtn" type="Button" parent="TopPanel"]
layout_mode = 0
offset_left = 1168.0
offset_top = 80.0
offset_right = 1278.0
offset_bottom = 111.0
text = "version: 0.0.1"

[node name="DominionBar" type="ProgressBar" parent="TopPanel"]
layout_mode = 0
offset_left = 504.0
offset_top = 48.0
offset_right = 704.0
offset_bottom = 75.0
tooltip_text = "Area in which you can build. Research and grow to increase your domain."
mouse_filter = 1
value = 1.0
show_percentage = false

[node name="CurrentDominionLbl" type="Label" parent="TopPanel/DominionBar"]
layout_mode = 0
offset_left = -104.0
offset_right = -16.0
offset_bottom = 23.0
text = "1"
horizontal_alignment = 2

[node name="MaxDominionLbl" type="Label" parent="TopPanel/DominionBar"]
layout_mode = 0
offset_left = 208.0
offset_right = 296.0
offset_bottom = 26.0
text = "10"

[node name="Label" type="Label" parent="TopPanel/DominionBar"]
self_modulate = Color(0.372549, 0.560784, 1, 0.321569)
layout_mode = 0
offset_left = 72.0
offset_right = 112.0
offset_bottom = 23.0
text = "Dominion"

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 0
offset_left = 832.0
offset_top = 120.0
offset_right = 1272.0
offset_bottom = 744.0
clip_tabs = false

[node name="Population" type="ScrollContainer" parent="TabContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Population"]
custom_minimum_size = Vector2(420, 500)
layout_mode = 2

[node name="PopDetailsBtn" type="Button" parent="TabContainer/Population/VBoxContainer"]
layout_mode = 2
text = "Population Details"

[node name="PopsLbl" type="Label" parent="TabContainer/Population/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "-Population at a glance-"
horizontal_alignment = 1
autowrap_mode = 2

[node name="MalePopsLbl" type="Label" parent="TabContainer/Population/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Male:"
autowrap_mode = 2

[node name="FemalePopsLbl" type="Label" parent="TabContainer/Population/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Female:"
autowrap_mode = 2

[node name="AgeLbl" type="Label" parent="TabContainer/Population/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "-Ages-"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ChildrenPopsLbl" type="Label" parent="TabContainer/Population/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Children:"
autowrap_mode = 2

[node name="AdultPopsLbl" type="Label" parent="TabContainer/Population/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Adults:"
autowrap_mode = 2

[node name="ElderlyPopsLbl" type="Label" parent="TabContainer/Population/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Elderly:"
autowrap_mode = 2

[node name="SocialPopsLbl" type="Label" parent="TabContainer/Population/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "-Social Status-"
horizontal_alignment = 1
autowrap_mode = 2

[node name="NoblePopsLbl" type="Label" parent="TabContainer/Population/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 1
text = "Nobles:"
autowrap_mode = 2

[node name="TribesmenPopsLbl" type="Label" parent="TabContainer/Population/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 1
text = "Tribesmen:"
autowrap_mode = 2

[node name="HunterGatherPopsLbl" type="Label" parent="TabContainer/Population/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Hunter-Gatherers:"
autowrap_mode = 2

[node name="SlavePopsLbl" type="Label" parent="TabContainer/Population/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 1
text = "Slaves:"
autowrap_mode = 2

[node name="Resources" type="ScrollContainer" parent="TabContainer"]
visible = false
clip_contents = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="TabContainer/Resources"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Resources/HSplitContainer"]
layout_mode = 2

[node name="TimberLbl" type="Label" parent="TabContainer/Resources/HSplitContainer/VBoxContainer"]
layout_mode = 2
text = "Timber:"

[node name="FlintLbl" type="Label" parent="TabContainer/Resources/HSplitContainer/VBoxContainer"]
layout_mode = 2
text = "Flint:"

[node name="StoneLbl" type="Label" parent="TabContainer/Resources/HSplitContainer/VBoxContainer"]
layout_mode = 2
text = "Stone:"

[node name="ThatchLbl" type="Label" parent="TabContainer/Resources/HSplitContainer/VBoxContainer"]
layout_mode = 2
text = "Thatch:"

[node name="VBoxContainer2" type="VBoxContainer" parent="TabContainer/Resources/HSplitContainer"]
layout_mode = 2

[node name="WildBerriesLbl" type="Label" parent="TabContainer/Resources/HSplitContainer/VBoxContainer2"]
layout_mode = 2
text = "Wild Berries:"

[node name="WildMeatLbl" type="Label" parent="TabContainer/Resources/HSplitContainer/VBoxContainer2"]
layout_mode = 2
text = "Wild Meat:"

[node name="WaterLbl" type="Label" parent="TabContainer/Resources/HSplitContainer/VBoxContainer2"]
layout_mode = 2
text = "Water:"

[node name="Buildings" type="ScrollContainer" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Buildings"]
layout_mode = 2

[node name="TimberCampBtn" type="Button" parent="TabContainer/Buildings/VBoxContainer"]
layout_mode = 2
tooltip_text = "Builds Timber Camp"
text = "Timber Camp"

[node name="TimberCampLbl" type="Label" parent="TabContainer/Buildings/VBoxContainer/TimberCampBtn"]
layout_mode = 0
offset_left = 128.0
offset_top = 1.0
offset_right = 168.0
offset_bottom = 27.0
text = ": 0"

[node name="FlintCampBtn" type="Button" parent="TabContainer/Buildings/VBoxContainer"]
layout_mode = 2
tooltip_text = "Builds Flint Camp"
text = "Flint Camp"

[node name="FlintCampLbl" type="Label" parent="TabContainer/Buildings/VBoxContainer/FlintCampBtn"]
layout_mode = 0
offset_left = 128.0
offset_top = 1.0
offset_right = 168.0
offset_bottom = 27.0
text = ": 0"

[node name="StoneCampBtn" type="Button" parent="TabContainer/Buildings/VBoxContainer"]
layout_mode = 2
tooltip_text = "Builds Stone Camp"
text = "Stone Camp"

[node name="StoneCampLbl" type="Label" parent="TabContainer/Buildings/VBoxContainer/StoneCampBtn"]
layout_mode = 0
offset_left = 128.0
offset_top = 1.0
offset_right = 168.0
offset_bottom = 27.0
text = ": 0"

[node name="PrimitiveWellBtn" type="Button" parent="TabContainer/Buildings/VBoxContainer"]
layout_mode = 2
tooltip_text = "Builds Primitive Well for water."
text = "Primitive Well"

[node name="PrimitiveWellLbl" type="Label" parent="TabContainer/Buildings/VBoxContainer/PrimitiveWellBtn"]
layout_mode = 0
offset_left = 128.0
offset_top = 1.0
offset_right = 168.0
offset_bottom = 27.0
text = ": 0"

[node name="HuntersCampBtn" type="Button" parent="TabContainer/Buildings/VBoxContainer"]
layout_mode = 2
tooltip_text = "Increases output gained from foraging/hunting"
text = "Hunters Camp"

[node name="HuntersCampLbl" type="Label" parent="TabContainer/Buildings/VBoxContainer/HuntersCampBtn"]
layout_mode = 0
offset_left = 128.0
offset_top = 1.0
offset_right = 168.0
offset_bottom = 27.0
text = ": 0"

[node name="DolmenBtn" type="Button" parent="TabContainer/Buildings/VBoxContainer"]
visible = false
layout_mode = 2
tooltip_text = "Increases output gained from foraging/hunting"
text = "Dolmen"

[node name="DolmenLbl" type="Label" parent="TabContainer/Buildings/VBoxContainer/DolmenBtn"]
layout_mode = 0
offset_left = 128.0
offset_top = 1.0
offset_right = 168.0
offset_bottom = 27.0
text = ": 0"

[node name="InfoPanel" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 80.0
offset_right = 576.0
offset_bottom = 384.0

[node name="VBoxContainer" type="VBoxContainer" parent="InfoPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
autowrap_mode = 1

[node name="VersionDialog" type="AcceptDialog" parent="."]
title = "Changelog"
position = Vector2i(200, 250)
size = Vector2i(152, 109)
content_scale_aspect = 4
dialog_text = "July 1, 2023 - 0.0.1 
- Released"

[node name="GameDialog" type="AcceptDialog" parent="."]
position = Vector2i(250, 200)
size = Vector2i(100, 113)

[node name="VBoxContainer" type="VBoxContainer" parent="GameDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 92.0
offset_bottom = 64.0

[node name="TextLbl" type="Label" parent="GameDialog/VBoxContainer"]
layout_mode = 2
text = "Text"

[node name="BonusLbl" type="Label" parent="GameDialog/VBoxContainer"]
layout_mode = 2
text = "Text"

[connection signal="pressed" from="TopPanel/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="TopPanel/LoadGameBtn" to="." method="_on_load_game_btn_pressed"]
[connection signal="pressed" from="TopPanel/VersionBtn" to="." method="_on_version_btn_pressed"]
[connection signal="pressed" from="TabContainer/Buildings/VBoxContainer/TimberCampBtn" to="." method="_on_timber_camp_btn_pressed"]
[connection signal="pressed" from="TabContainer/Buildings/VBoxContainer/FlintCampBtn" to="." method="_on_flint_camp_btn_pressed"]
[connection signal="pressed" from="TabContainer/Buildings/VBoxContainer/StoneCampBtn" to="." method="_on_stone_camp_btn_pressed"]
[connection signal="pressed" from="TabContainer/Buildings/VBoxContainer/PrimitiveWellBtn" to="." method="_on_primitive_well_btn_pressed"]
[connection signal="pressed" from="TabContainer/Buildings/VBoxContainer/HuntersCampBtn" to="." method="_on_hunters_camp_btn_pressed"]
[connection signal="pressed" from="TabContainer/Buildings/VBoxContainer/DolmenBtn" to="." method="_on_dolmen_btn_pressed"]
